--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint && eslint",
+    "test": "jest"
   },
   "dependencies": {
     "next": "11.0.1",
@@ -14,9 +15,16 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.24",
     "@types/react": "17.0.15",
-    "eslint": "7.32.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
+    "eslint": "^7.32.0",
     "eslint-config-next": "11.0.1",
+    "eslint-plugin-react": "^7.24.0",
+    "jest": "^27.0.6",
+    "prettier": "^2.3.2",
+    "ts-node": "^10.1.0",
     "typescript": "4.3.5"
   }
 }
