--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@cig-platform/ui": "^0.1.1",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
