--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@cig-platform/ui": "^0.1.3",
+    "i18next": "^20.6.1",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-i18next": "^11.12.0",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
