Add @Containers namespace

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,9 @@
       ],
       "@Static/*": [
         "./static/*"
+      ],
+      "@Containers/*": [
+        "./containers/*"
       ]
     }
   },
