--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@cig-platform/ui": "^0.1.8",
     "i18next": "^20.6.1",
     "next": "11.0.1",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-i18next": "^11.12.0",
-    "styled-components": "^5.3.1"
+    "scheduler": "^0.20.2",
+    "styled-components": "^5.3.1",
+    "use-context-selector": "^1.3.7"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
