--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,9 @@
       ],
       "@Components/*": [
         "./components/*"
+      ],
+      "@Constants/*": [
+        "./constants/*"
       ]
     }
   },
