Add @Utils namespace

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,6 +42,9 @@
       ],
       "@Constants/*": [
         "./constants/*"
+      ],
+      "@Utils/*": [
+        "./utils/*"
       ]
     }
   },
