--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@cig-platform/auth-bff-client": "^0.0.1",
     "@cig-platform/ui": "^0.1.12",
     "i18next": "^20.6.1",
     "next": "11.0.1",
