--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@cig-platform/auth-bff-client": "^0.0.1",
+    "@cig-platform/core": "^0.2.36",
     "@cig-platform/ui": "^0.1.12",
     "i18next": "^20.6.1",
     "next": "11.0.1",
