Add Services namespace

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,6 +48,9 @@
       ],
       "@Hooks/*": [
         "./hooks/*"
+      ],
+      "@Services/*": [
+        "./services/*"
       ]
     }
   },
