--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-i18next": "^11.12.0",
     "scheduler": "^0.20.2",
     "styled-components": "^5.3.1",
+    "sweetalert2": "^11.1.5",
     "use-context-selector": "^1.3.7"
   },
   "devDependencies": {
