--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint && eslint",
-    "test": "jest"
+    "test": "jest --watch"
   },
   "dependencies": {
     "@cig-platform/auth-bff-client": "^0.0.2",
@@ -23,16 +23,22 @@
     "use-context-selector": "^1.3.7"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.0",
     "@types/jest": "^26.0.24",
     "@types/react": "17.0.15",
     "@types/styled-components": "^5.1.14",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
+    "babel-jest": "^27.2.0",
     "eslint": "^7.32.0",
     "eslint-config-next": "11.0.1",
     "eslint-plugin-react": "^7.24.0",
-    "jest": "^27.0.6",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.2.0",
     "prettier": "^2.3.2",
+    "react-test-renderer": "^17.0.2",
+    "ts-jest": "^27.0.5",
     "ts-node": "^10.1.0",
     "typescript": "4.3.5"
   }
