Change test script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint && eslint",
-    "test": "jest --watch"
+    "test": "jest"
   },
   "dependencies": {
     "@cig-platform/auth-bff-client": "^0.0.2",
