--- a/package.json
+++ b/package.json
@@ -10,20 +10,36 @@
     "test": "jest"
   },
   "dependencies": {
+    "@cig-platform/auth-bff-client": "^0.0.2",
+    "@cig-platform/ui": "^0.1.13",
+    "i18next": "^20.6.1",
     "next": "11.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "17.0.2",
+    "react-i18next": "^11.12.0",
+    "scheduler": "^0.20.2",
+    "styled-components": "^5.3.1",
+    "sweetalert2": "^11.1.5",
+    "use-context-selector": "^1.3.7"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.0",
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/jest": "^26.0.24",
     "@types/react": "17.0.15",
+    "@types/styled-components": "^5.1.14",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
+    "babel-jest": "^27.2.0",
     "eslint": "^7.32.0",
     "eslint-config-next": "11.0.1",
     "eslint-plugin-react": "^7.24.0",
-    "jest": "^27.0.6",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.2.0",
     "prettier": "^2.3.2",
+    "react-test-renderer": "^17.0.2",
+    "ts-jest": "^27.0.5",
     "ts-node": "^10.1.0",
     "typescript": "4.3.5"
   }
