--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-i18next": "^11.12.0",
+    "react-icons": "^4.2.0",
     "scheduler": "^0.20.2",
     "styled-components": "^5.3.1",
     "sweetalert2": "^11.1.5",
