--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@cig-platform/auth-bff-client": "^0.0.2",
-    "@cig-platform/ui": "^0.1.13",
+    "@cig-platform/ui": "^0.1.16",
     "i18next": "^20.6.1",
     "next": "11.0.1",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-i18next": "^11.12.0",
+    "react-icons": "^4.2.0",
     "scheduler": "^0.20.2",
     "styled-components": "^5.3.1",
     "sweetalert2": "^11.1.5",
