--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@cig-platform/auth-bff-client": "^0.0.2",
     "@cig-platform/ui": "^0.1.16",
+    "axios": "^0.21.4",
     "i18next": "^20.6.1",
     "next": "11.0.1",
     "react": "^17.0.2",
