--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@cig-platform/auth-bff-client": "^0.0.2",
+    "@cig-platform/types": "^0.0.1",
     "@cig-platform/ui": "^0.1.26",
     "axios": "^0.21.4",
     "i18next": "^20.6.1",
