--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@cig-platform/auth-bff-client": "^0.0.3",
+    "@cig-platform/hooks": "^0.0.1",
     "@cig-platform/types": "^0.0.3",
     "@cig-platform/ui": "^0.1.30",
     "axios": "^0.21.4",
