--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@cig-platform/auth-bff-client": "^0.0.3",
+    "@cig-platform/hooks": "^0.0.1",
     "@cig-platform/types": "^0.0.3",
     "@cig-platform/ui": "^0.1.30",
     "axios": "^0.21.4",
@@ -29,6 +30,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.0",
     "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^26.0.24",
     "@types/react": "17.0.15",
     "@types/styled-components": "^5.1.14",
