--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "react-icons": "^4.2.0",
     "scheduler": "^0.20.2",
     "styled-components": "^5.3.1",
-    "sweetalert2": "^11.1.5",
-    "use-context-selector": "^1.3.7"
+    "sweetalert2": "^11.1.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
