--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.4",
     "i18next": "^20.6.1",
     "next": "11.0.1",
+    "next-global-css": "^1.2.0",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-i18next": "^11.12.0",
