--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@cig-platform/context": "^0.1.7",
     "@cig-platform/hooks": "^0.0.1",
     "@cig-platform/types": "^0.0.3",
-    "@cig-platform/ui": "^0.1.62",
+    "@cig-platform/ui": "^0.1.75",
     "axios": "^0.21.4",
     "i18next": "^20.6.1",
     "next": "11.0.1",
+    "next-global-css": "^1.2.0",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-i18next": "^11.12.0",
