--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@cig-platform/ui": "^0.1.75",
     "axios": "^0.21.4",
     "i18next": "^20.6.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "11.0.1",
     "next-global-css": "^1.2.0",
     "react": "^17.0.2",
@@ -33,6 +34,7 @@
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^26.0.24",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/react": "17.0.15",
     "@types/styled-components": "^5.1.14",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
