--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,4 @@ NEXT_PUBLIC_VIA_CEP_URL=http://viacep.com.br/
 NEXT_PUBLIC_BACKOFFICE_URL=
 NEXT_PUBLIC_BREEDER_PAGE_URL=
 NEXT_PUBLIC_POULTRY_PAGE_URL=
+NEXT_PUBLIC_LOGO_URL=
