--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,4 @@ NEXT_PUBLIC_BREEDER_PAGE_URL=
 NEXT_PUBLIC_POULTRY_PAGE_URL=
 NEXT_PUBLIC_LOGO_URL=
 NEXT_PUBLIC_MARKETPLACE_BFF_URL=
+NEXT_PUBLIC_POULTRY_PLACEHOLDER_IMAGE_URL=
