--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "17.0.2",
     "react-i18next": "^11.12.0",
     "react-icons": "^4.2.0",
+    "react-slider": "^1.3.1",
     "scheduler": "^0.20.2",
     "styled-components": "^5.3.1",
     "sweetalert2": "^11.1.5"
@@ -38,6 +39,7 @@
     "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/react": "17.0.15",
+    "@types/react-slider": "^1.3.1",
     "@types/styled-components": "^5.1.14",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
