--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,4 @@ NEXT_PUBLIC_LOGO_URL=
 NEXT_PUBLIC_MARKETPLACE_BFF_URL=
 NEXT_PUBLIC_POULTRY_PLACEHOLDER_IMAGE_URL=
 NEXT_PUBLIC_FACEBOOK_APP_ID=
+NEXT_PUBLIC_GOOGLE_CLIENT_ID=
