--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-i18next": "^11.12.0",
     "react-icons": "^4.2.0",
     "react-slider": "^1.3.1",
