--- a/tsconfig.json
+++ b/tsconfig.json
@@ -52,7 +52,8 @@
       "@Services/*": [
         "./services/*"
       ]
-    }
+    },
+    "incremental": true
   },
   "include": [
     "next-env.d.ts",
