--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@cig-platform/auth-bff-client": "^0.1.10",
     "@cig-platform/context": "^0.1.7",
     "@cig-platform/enums": "^0.0.5",
+    "@cig-platform/factories": "^0.0.20",
     "@cig-platform/hooks": "^0.0.3",
     "@cig-platform/marketplace-bff-client": "^0.0.14",
     "@cig-platform/microfrontend-helper": "^0.0.3",
