--- a/package.json
+++ b/package.json
@@ -10,52 +10,53 @@
     "test": "jest"
   },
   "dependencies": {
-    "@cig-platform/auth-bff-client": "^0.1.9",
+    "@cig-platform/auth-bff-client": "^0.1.10",
     "@cig-platform/context": "^0.1.7",
-    "@cig-platform/enums": "^0.0.4",
-    "@cig-platform/hooks": "^0.0.2",
-    "@cig-platform/marketplace-bff-client": "^0.0.12",
-    "@cig-platform/microfrontend-helper": "^0.0.2",
-    "@cig-platform/types": "^0.0.28",
-    "@cig-platform/ui": "^0.1.129",
-    "axios": "^0.21.4",
-    "i18next": "^20.6.1",
+    "@cig-platform/enums": "^0.0.5",
+    "@cig-platform/factories": "^0.0.20",
+    "@cig-platform/hooks": "^0.0.3",
+    "@cig-platform/marketplace-bff-client": "^0.0.14",
+    "@cig-platform/microfrontend-helper": "^0.0.3",
+    "@cig-platform/types": "^0.0.33",
+    "@cig-platform/ui": "^0.1.133",
+    "axios": "^0.26.0",
+    "i18next": "^21.6.13",
     "jsonwebtoken": "^8.5.1",
-    "next": "11.0.1",
+    "next": "12.1.0",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
-    "react-i18next": "^11.12.0",
-    "react-icons": "^4.2.0",
+    "react-i18next": "^11.15.6",
+    "react-icons": "^4.3.1",
     "react-slider": "^1.3.1",
     "scheduler": "^0.20.2",
-    "styled-components": "^5.3.1",
-    "sweetalert2": "^11.1.5"
+    "styled-components": "^5.3.3",
+    "sweetalert2": "^11.4.4"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.0",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
     "@testing-library/react-hooks": "^7.0.2",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^26.0.24",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/react": "17.0.15",
+    "@types/react": "17.0.39",
     "@types/react-facebook-login": "^4.1.4",
     "@types/react-slider": "^1.3.1",
-    "@types/styled-components": "^5.1.14",
-    "@typescript-eslint/eslint-plugin": "^4.28.5",
-    "@typescript-eslint/parser": "^4.28.5",
-    "babel-jest": "^27.2.0",
-    "eslint": "^7.32.0",
-    "eslint-config-next": "11.0.1",
-    "eslint-plugin-react": "^7.24.0",
+    "@types/styled-components": "^5.1.24",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
+    "babel-jest": "^27.5.1",
+    "eslint": "^8.10.0",
+    "eslint-config-next": "12.1.0",
+    "eslint-plugin-react": "^7.29.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.2.0",
-    "prettier": "^2.3.2",
+    "jest": "^27.5.1",
+    "prettier": "^2.5.1",
     "react-test-renderer": "^17.0.2",
-    "ts-jest": "^27.0.5",
-    "ts-node": "^10.1.0",
-    "typescript": "4.3.5"
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.7.0",
+    "typescript": "4.6.2"
   }
 }
