Add env variable

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,9 @@ name: CI
 
 on: [push]
 
+env:
+  NEXT_PUBLIC_MARKETPLACE_BFF_URL: https://cig-marketplace-bff.herokuapp.com/
+
 jobs:
   tests:
     runs-on: ubuntu-latest
