Add routes of advertising to content search

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@cig-platform/auth-bff-client": "^0.1.10",
+    "@cig-platform/content-search-client": "^0.0.18",
     "@cig-platform/context": "^0.1.7",
     "@cig-platform/enums": "^0.0.5",
     "@cig-platform/factories": "^0.0.20",
