Add search request to SSR

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,9 @@
       "@Contexts/*": [
         "./contexts/*"
       ],
+      "@Formatters/*": [
+        "./formatters/*"
+      ],
       "@Components/*": [
         "./components/*"
       ],
