--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-google-login": "^5.2.2",
     "react-i18next": "^11.15.6",
     "react-icons": "^4.3.1",
+    "react-query": "^3.39.1",
     "react-slider": "^1.3.1",
     "scheduler": "^0.20.2",
     "styled-components": "^5.3.3",
