--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@cig-platform/auth-bff-client": "^0.1.12",
-    "@cig-platform/content-search-client": "^0.0.21",
+    "@cig-platform/content-search-client": "^0.0.23",
     "@cig-platform/context": "^0.1.7",
     "@cig-platform/enums": "^0.0.5",
     "@cig-platform/factories": "^0.0.20",
@@ -33,6 +33,7 @@
     "react-google-login": "^5.2.2",
     "react-i18next": "^11.15.6",
     "react-icons": "^4.3.1",
+    "react-query": "^3.39.1",
     "react-slider": "^1.3.1",
     "scheduler": "^0.20.2",
     "styled-components": "^5.3.3",
