--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@cig-platform/auth-bff-client": "^0.1.12",
     "@cig-platform/content-search-client": "^0.0.23",
     "@cig-platform/context": "^0.1.7",
+    "@cig-platform/data-helper": "^0.0.1",
     "@cig-platform/enums": "^0.0.5",
     "@cig-platform/factories": "^0.0.20",
     "@cig-platform/hooks": "^0.0.5",
