--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "i18next": "^21.6.13",
     "jsonwebtoken": "^8.5.1",
     "next": "12.1.0",
+    "next-pwa": "^5.6.0",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-facebook-login": "^4.1.1",
