--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
     {
       "src": "/logo.svg",
       "sizes": "192x192",
-      "type": "image/svg"
+      "type": "image/png"
     }
   ],
   "theme_color": "#2a3c5a",
